create github pages

--- a/page1.html
+++ b/page1.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-i" data-rv-view="48">
+<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-i" data-rv-view="81">
 
     
 
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web creator</a></section><section class="header9 cid-qCFz2RHFqS mbr-fullscreen mbr-parallax-background" id="header9-j" data-rv-view="50">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="header9 cid-qCFz2RHFqS mbr-fullscreen mbr-parallax-background" id="header9-j" data-rv-view="83">
 
     
 
