create github pages

--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-m" data-rv-view="91">
+<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-m" data-rv-view="47">
 
     
 
@@ -39,7 +39,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="http://xn--ignfugos-e2a.es/">
-                         <img src="assets/images/logo-con-fondo-600x600.jpg" alt="Mobirise" title="" media-simple="true" style="height: 5.4rem;">
+                         <img src="assets/images/logo-con-fondo-600x600.jpg" alt="Mobirise" title="" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com"></a></span>
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white display-4" href="page1.html"><span class="mbri-question mbr-iconfont mbr-iconfont-btn"></span>Quiénes somos</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Proyectos</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com"><span class="mbri-play mbr-iconfont mbr-iconfont-btn"></span>Acciones</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com"></a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com"></a></li>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Proyectos</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html"><span class="mbri-play mbr-iconfont mbr-iconfont-btn"></span>Acciones</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com"></a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com"></a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">bootstrap themes</a></section><section class="carousel slide cid-qCG5o7cmZj" data-interval="false" id="slider2-o" data-rv-view="93">
+<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="carousel slide cid-qCG5o7cmZj" data-interval="false" id="slider2-o" data-rv-view="49">
 
     
     <div class="container content-slider">
