create github pages

--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,22 @@
   
 </head>
 <body>
-<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-k" data-rv-view="42">
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112267463-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112267463-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
+<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-k" data-rv-view="21">
 
     
 
@@ -58,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build your own website</a></section><section class="header5 cid-qCG4FmHIsh mbr-fullscreen mbr-parallax-background" id="header5-l" data-rv-view="44">
+<section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><section class="header5 cid-qCG4FmHIsh mbr-fullscreen mbr-parallax-background" id="header5-l" data-rv-view="23">
 
     
 
