--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,22 @@
   
 </head>
 <body>
-<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-m" data-rv-view="47">
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112267463-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112267463-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
+<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-m" data-rv-view="26">
 
     
 
@@ -58,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="carousel slide cid-qCG5o7cmZj" data-interval="false" id="slider2-o" data-rv-view="49">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="carousel slide cid-qCG5o7cmZj" data-interval="false" id="slider2-o" data-rv-view="28">
 
     
     <div class="container content-slider">
