--- a/page1.html
+++ b/page1.html
@@ -22,7 +22,22 @@
   
 </head>
 <body>
-<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-i" data-rv-view="37">
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112267463-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112267463-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
+<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-i" data-rv-view="16">
 
     
 
@@ -58,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create a website</a></section><section class="header9 cid-qCFz2RHFqS mbr-fullscreen mbr-parallax-background" id="header9-j" data-rv-view="39">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="header9 cid-qCFz2RHFqS mbr-fullscreen mbr-parallax-background" id="header9-j" data-rv-view="18">
 
     
 
