create github pages

--- a/page3.html
+++ b/page3.html
@@ -37,7 +37,7 @@
 <!-- /Google Analytics -->
 
 
-<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-m" data-rv-view="26">
+<section class="menu cid-qCgOjdeNU7" once="menu" id="menu1-m" data-rv-view="55">
 
     
 
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="carousel slide cid-qCG5o7cmZj" data-interval="false" id="slider2-o" data-rv-view="28">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="carousel slide cid-qCG5o7cmZj" data-interval="false" id="slider2-o" data-rv-view="57">
 
     
     <div class="container content-slider">
